# daforfer

./: README.md  pyproject.toml
scripts/: daforfer.py
src/daforfer/: __init__.py
test/: test_daforfer.py  test_hello.py
