[project]
name = "daforfer"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.1",
    "click>=8.1.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "daforfer",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
daforfer = { workspace = true }

[project.scripts]
daforfer-dump = "daforfer.scripts:db_to_excel"
